	the help page and is now regarded as an error.

    o	Added colorRamp() and colorRampPalette() for color interpolation.

    o	install.packages() and friends now accept a vector of URLs for
	'repos' or 'contriburl' and get the newest available version of
	a package from the first repository on the list in which it is
	found.	The argument 'CRAN' is still accepted, but deprecated.

	New function new.packages() to report uninstalled packages
	available at the requested repositories.

	New function available.packages(), similar to CRAN.packages()
	but for use with multiple repositories.

    o	New argument 'immediate.' to warning() to send an immediate
	warning.

    o	file.append() has been tuned, including for the case of
	appending many files to a single file.

    o	subset() now has a method for matrices, similar to that for
	data frames.

    o	install.packages() no longer asks if downloaded packages
	should be deleted: they will be deleted at the end of the
	session anyway (and can be deleted by the user at any time).

    o	R CMD check will now work on a source tarball and prints out
	information about the version of R and the package.

    o	New function recordGraphics() to encapsulate calculations
	and graphics output together on graphics engine display list.
	To be used with care.

    o	kmeans() now returns an object of class "kmeans" which has a
	print() method.

	Two alternative algorithms have been implemented.

	If the number of centres is supplied, it has a new option of
	multiple random starts.

    o	is.all.equal() convenience function to be used for programming.

    o	unclass() is no longer allowed for environments and external
	pointers (since these cannot be copied and so unclass() was
	destructive of its argument).  You can still change the
	"class" attribute.

    o	choose(n,k) and lchoose(.) now also work for arbitrary (real) n in
	accordance with the general binomial theorem.  choose(*,k) is more
	accurate (and faster) for small k.
